<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Put Image</string>
    <string name="analyze">Let\'s Analyze</string>
    <string name="result">Hasil Analisis:</string>
    <string name="percent">100%</string>
    <string name="category">Non-cancer</string>
    <string name="article">More Articles</string>

    <string name="history">History</string>

    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="no_media_selected">No media selected</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>

    <string name="menu_1">History</string>
</resources>