<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_margin="10dp"
            app:tint="@color/color_primary" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_place_holder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_clipboard"
                app:tint="@color/color_primary" />

            <TextView
                android:id="@+id/hasil_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.TitleLarge"
                android:textStyle="bold"
                android:text="@string/result"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/result_threshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/percent"
            android:textColor="@color/color_primary"
            style="@style/TextAppearance.AppCompat.TitleLarge" />

        <TextView
            android:id="@+id/result_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/category"
            android:textColor="@color/blue"
            style="@style/TextAppearance.AppCompat.TitleLarge" />
    </LinearLayout>
</ScrollView>